Ajout des annexes

--- a/Genma_Tor et le Tor Browser Annexes.tex
+++ b/Genma_Tor et le Tor Browser Annexes.tex
@@ -78,5 +78,19 @@ TorBirdy est une extension pour le courielleur Thunderbird qui permet de faire l
 
 }
 \end{frame}
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Série de liens}
+\begin{itemize}
+\justifying{
+\item \url{https://www.torproject.org}
+\item \url{https://tails.boum.org/}
+}
+\end{itemize}
+\end{frame}
+
+
+
 %----------------------------------------------------------------------------------------
 \end{document}
