--- a/Genma_Tor et le Tor Browser.tex
+++ b/Genma_Tor et le Tor Browser.tex
@@ -64,6 +64,25 @@
 \end{columns}
 \end{frame}
 
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\frametitle{Objectif de la présentation}
+
+\justifying{
+La présentation a une durée d'une heure, questions comprises.
+Le but est de vous aider à comprendre ce qu'est Tor, son principe, ses usages. Tous les aspects de Tor ne pourront bien évidememment pas être vus ;-) \\
+$\Rightarrow$ Nous pourrons poursuivre la discussion sur le stand, dans la limite de mes propres connaissances.
+\\~\\
+}
+
+\begin{block}{ATTENTION}
+\justifying{Bien qu'un long travail de préparation ait été fait, des erreurs, des simplifications peuvent figurées dans cette présentation ou dans les propos tenus. C'est la documentation du projet \\ \url{https://www.torproject.org} qui fait foi. 
+}
+\end{block}
+\end{frame}
+
+
 %----------------------------------------------------------------------------------------
 \begin{frame}
 \begin{center}
