--- a/Genma_Tor et le Tor Browser.tex
+++ b/Genma_Tor et le Tor Browser.tex
@@ -273,7 +273,7 @@ Ainsi au niveau des échanges client noeud d'entrée, le paquet est chiffré par
 \frametitle{Tor hidden service - les services cachés de TOR 1/3}
 \begin{block}{Caractéristiques des services cachés}
 \justifying{
-Tor permet aux clients et aux relais d’offrir des services cachés. Il est ainsi possible de proposer l'accès à un serveur web, un serveur SSH, etc, sans révéler son adresse IP aux utilisateur.
+Tor permet aux clients et aux relais d’offrir des services cachés. Il est ainsi possible de proposer l'accès à un serveur web, un serveur SSH, etc, sans révéler son adresse IP aux utilisateurs.
 \begin{itemize}
 \item Ils portent une adresse qui se termine par .onion.
 \item Ces \emph{sites} peuvent n'être accessibles \emph{que} via le réseau Tor.
